[FELIX-5306] User friendly syntax for floats and doubles in FileInstall
git-svn-id: https://svn.apache.org/repos/asf/felix/trunk/utils@1807697 13f79535-47bb-0310-9956-ffa450edef68